--- a/trunk/src/Core/Loader/demo/StandardLoader/Loadee/Loadee.csproj
+++ b/trunk/src/Core/Loader/demo/StandardLoader/Loadee/Loadee.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{7CCE9049-76C5-4D92-9731-FB375C60F9B1}</ProjectGuid>
@@ -62,21 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Services\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\AST\MethodInline\SolidOpt.Services.MethodInline.csproj">
-      <Project>{09A9101B-94C4-46F0-99B5-DA5E658C5A4E}</Project>
-      <Name>SolidOpt.Services.MethodInline</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\IL\MethodInline\SolidOpt.Services.MethodInline.csproj">
       <Project>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</Project>
       <Name>SolidOpt.Services.MethodInline</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\Services\Transformations\Optimizations\SolidOpt.Services.Optimizations.csproj">
-      <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
-      <Name>SolidOpt.Services.Optimizations</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\Services\Transformations\SolidOpt.Services.Transformations.csproj">
       <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
