--- a/trunk/src/Services/Transformations/Multimodel/ILtoAST/SolidOpt.Services.ILtoAST.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ILtoAST/SolidOpt.Services.ILtoAST.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{2CEFC6BD-6924-4E76-97BF-4C9951F09D1F}</ProjectGuid>
@@ -54,18 +54,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
-      <Name>SolidOpt.Services.Transformations</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AstMethodDefinitionModel\SolidOpt.Services.AstMethodDefinitionModel.csproj">
-      <Project>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</Project>
-      <Name>SolidOpt.Services.AstMethodDefinitionModel</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
       <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
       <Name>Cecil.Decompiler</Name>
@@ -77,6 +65,10 @@
     <ProjectReference Include="..\SolidOpt.Services.Multimodel.csproj">
       <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
       <Name>SolidOpt.Services.Multimodel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AstMethodDefinitionModel\SolidOpt.Services.AstMethodDefinitionModel.csproj">
+      <Project>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</Project>
+      <Name>SolidOpt.Services.AstMethodDefinitionModel</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
