--- a/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{3ADFD79B-EE89-4E79-85E6-33DDECC8459A}</ProjectGuid>
@@ -52,23 +52,15 @@
       <Name>Mono.Cecil</Name>
     </ProjectReference>
     <Compile Include="src\ILtoCFGTransformer.cs" />
-    <ProjectReference Include="..\..\..\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
+    <Compile Include="src\ControlFlowGraphBuilder.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\SolidOpt.Services.Multimodel.csproj">
+      <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
+      <Name>SolidOpt.Services.Multimodel</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
       <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
       <Name>SolidOpt.Services.ControlFlowGraph</Name>
-    </ProjectReference>
-    <Compile Include="src\ControlFlowGraphBuilder.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <ProjectReference Include="..\..\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
-      <Name>SolidOpt.Services.Transformations</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SolidOpt.Services.Multimodel.csproj">
-      <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
-      <Name>SolidOpt.Services.Multimodel</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
