--- a/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.MethodInline.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.MethodInline.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</ProjectGuid>
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -61,14 +62,6 @@
     <ProjectReference Include="..\..\..\..\..\vendors\Mono.Cecil\rocks\Mono.Cecil.Rocks.csproj">
       <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
       <Name>Mono.Cecil.Rocks</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
-      <Name>SolidOpt.Services.Transformations</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SolidOpt.Services.Optimizations.csproj">
       <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
