--- a/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{f1c147e3-8578-4d5c-b2f8-1516bb43211b}</ProjectGuid>
@@ -58,14 +58,6 @@
     <ProjectReference Include="..\..\..\..\..\vendors\Mono.Cecil\rocks\Mono.Cecil.Rocks.csproj">
       <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
       <Name>Mono.Cecil.Rocks</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
-      <Name>SolidOpt.Services.Transformations</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SolidOpt.Services.Optimizations.csproj">
       <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
