System.Core added to the references of NopRemover and ArithmeticOverflowRemover, because gmcs cannot use the method extensions.

--- a/trunk/src/Services/Transformations/Optimizations/IL/OverflowArithmeticRemove/SolidOpt.Services.OverflowArithmeticRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/OverflowArithmeticRemove/SolidOpt.Services.OverflowArithmeticRemove.csproj
@@ -72,4 +72,7 @@
       <Name>SolidOpt.Services.Optimizations</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Core" />
+  </ItemGroup>
 </Project>
