--- a/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
@@ -33,6 +33,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
