* More references added. SharpDevelop doesn't resolve third party references if A refs B, B refs C in MonoDevelop we don't need to add C as reference in A, when using functionality from C. * Transform loader loads the plugins from plugins.list, which has hardcoded dir separator. New function added for compatibility with Linux * Example for testing the ILtoCFG transformation added.

--- a/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.csproj
@@ -51,5 +51,9 @@
       <Project>{846d2563-5af8-4459-81c6-59a9da174849}</Project>
       <Name>SolidOpt.Services.Compatibility</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
