--- a/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/SolidOpt.Services.MethodInline.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/SolidOpt.Services.MethodInline.csproj
@@ -78,5 +78,13 @@
       <Project>{2CEFC6BD-6924-4E76-97BF-4C9951F09D1F}</Project>
       <Name>SolidOpt.Services.ILtoAST</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
