--- a/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
@@ -64,5 +64,13 @@
       <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
       <Name>SolidOpt.Services.Optimizations</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
