--- a/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
+++ b/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
@@ -94,5 +94,13 @@
       <Project>{87B6DDB6-966A-4772-BF96-F9BBF921E2DF}</Project>
       <Name>SolidOpt.Core.Loader</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Services\Transformations\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
+      <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
+      <Name>SolidOpt.Services.ControlFlowGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Services\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
