--- a/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
@@ -62,6 +62,14 @@
       <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
       <Name>SolidOpt.Services.ControlFlowGraph</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="test\" />
