--- a/trunk/src/Services/Transformations/Multimodel/ASTtoIL/SolidOpt.Services.ASTtoIL.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ASTtoIL/SolidOpt.Services.ASTtoIL.csproj
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{12F84CA5-C981-420D-8CFA-24B68ED11DCE}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>SolidOpt.Services.Transformations.Multimodel.ASTtoIL </RootNamespace>
-    <AssemblyName>SolidOpt.Services.Transformations.Multimodel.ASTtoIL </AssemblyName>
+    <RootNamespace>SolidOpt.Services.Transformations.Multimodel.ASTtoIL</RootNamespace>
+    <AssemblyName>SolidOpt.Services.Transformations.Multimodel.ASTtoIL</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Vassil Vassilev\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
