* Fixed implementation of replacing directory separator; * Fixed the problem with path/plugins folder. Now it check if it exists and then includes it.

--- a/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
+++ b/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
@@ -38,12 +38,13 @@
     <Optimize>false</Optimize>
     <WarningLevel>4</WarningLevel>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <Commandlineparameters>../../../Loadee/bin/Debug/Loadee.exe</Commandlineparameters>
+    <Commandlineparameters> ../../../Loadee/bin/Debug/Loadee.exe ../../opt1.list</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <WarningLevel>4</WarningLevel>
+    <Commandlineparameters> ../../../Loadee/bin/Release/Loadee.exe ../../opt1.list</Commandlineparameters>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
