--- a/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.csproj
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{3ADFD79B-EE89-4E79-85E6-33DDECC8459A}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>SolidOpt.Services.Transformations.Multimodel.CilToControlFlowGraph</RootNamespace>
-    <AssemblyName>SolidOpt.Services.Transformations.Multimodel.CilToControlFlowGraph</AssemblyName>
+    <RootNamespace>SolidOpt.Services.Transformations.Multimodel.ILtoCFG</RootNamespace>
+    <AssemblyName>SolidOpt.Services.Transformations.Multimodel.ILtoCFG</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Vassil Vassilev\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
     <ProductVersion>9.0.21022</ProductVersion>
