--- a/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
+++ b/trunk/src/Core/Loader/demo/StandardLoader/Loader/TransformLoader.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{39655872-F4B6-4698-B326-81B3DA707192}</ProjectGuid>
