Optimization methods attributes are moved in separate assemblies.

--- a/trunk/src/Services/Subsystems/Configurator/demo/SeparateConfig/Config3.csproj
+++ b/trunk/src/Services/Subsystems/Configurator/demo/SeparateConfig/Config3.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{846CAC53-FF82-4133-A03F-F214B48790B1}</ProjectGuid>
@@ -41,7 +41,6 @@
     <Optimize>true</Optimize>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
