--- a/trunk/src/Services/Transformations/Optimizations/AST/ConstantFolding/SolidOpt.Services.ConstantFolding.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/AST/ConstantFolding/SolidOpt.Services.ConstantFolding.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{68F2A166-BED6-44F3-9440-3DDF412F4BA4}</ProjectGuid>
