--- a/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/SolidOpt.Services.ConstantPropagation.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/SolidOpt.Services.ConstantPropagation.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{1E227DA0-76C7-499C-BFB2-D11E6F212445}</ProjectGuid>
