--- a/trunk/src/Services/Compatibility/SolidOpt.Services.Compatibility.csproj
+++ b/trunk/src/Services/Compatibility/SolidOpt.Services.Compatibility.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="FixEnumerableVariance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="SolidOpt.Services.Compatibility.cd" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Core">
