--- a/trunk/src/Services/Transformations/Multimodel/AstMethodDefinitionModel/SolidOpt.Services.AstMethodDefinitionModel.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/AstMethodDefinitionModel/SolidOpt.Services.AstMethodDefinitionModel.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</ProjectGuid>
