--- a/trunk/src/Services/Transformations/Multimodel/ILtoAST/SolidOpt.Services.ILtoAST.csproj
+++ b/trunk/src/Services/Transformations/Multimodel/ILtoAST/SolidOpt.Services.ILtoAST.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{2CEFC6BD-6924-4E76-97BF-4C9951F09D1F}</ProjectGuid>
