--- a/trunk/src/Services/Transformations/Optimizations/AST/SimplifyExpression/SolidOpt.Services.SimplifyExpression.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/AST/SimplifyExpression/SolidOpt.Services.SimplifyExpression.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{29CE04D4-BB40-4638-800F-5EBADAB52B69}</ProjectGuid>
