--- a/trunk/src/Services/Transformations/Optimizations/IL/OverflowArithmeticRemove/SolidOpt.Services.OverflowArithmeticRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/OverflowArithmeticRemove/SolidOpt.Services.OverflowArithmeticRemove.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{ce5652bd-2574-4a52-916a-d326048d8b43}</ProjectGuid>
@@ -41,7 +41,6 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
