--- a/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
+++ b/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/SolidOpt.Services.NopRemove.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{f1c147e3-8578-4d5c-b2f8-1516bb43211b}</ProjectGuid>
