--- a/trunk/src/Services/Subsystems/Configurator/demo/AdvancedConfigDemo/AdvancedConfigDemo.csproj
+++ b/trunk/src/Services/Subsystems/Configurator/demo/AdvancedConfigDemo/AdvancedConfigDemo.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{D54146BB-B87A-4AA8-AD63-7D9AF1A28BC3}</ProjectGuid>
